# RScamera

./: .gitignore  build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts  task.txt
app/: build.gradle.kts
app/src/androidTest/java/com/example/realsensecapture/: PlaceholderInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/realsensecapture/: MainActivity.kt  VoiceNoteController.kt
app/src/main/java/com/example/realsensecapture/data/: SessionDao.kt  SessionEntity.kt  SessionRepository.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/realsensecapture/: PlaceholderUnitTest.kt
gradle/: libs.versions.toml
rsnative/: build.gradle.kts
rsnative/src/main/: AndroidManifest.xml
rsnative/src/main/cpp/: CMakeLists.txt  Findrealsense2.cmake  native-lib.cpp
rsnative/src/main/cpp/realsense2/include/librealsense2/: rs.hpp
rsnative/src/main/java/com/example/realsensecapture/rsnative/: NativeBridge.kt
rsnative/src/test/java/com/example/realsensecapture/rsnative/: PlaceholderUnitTest.kt
ui/: build.gradle.kts
ui/src/main/: AndroidManifest.xml
ui/src/main/java/com/example/realsensecapture/data/: AppDatabase.kt  SessionDao.kt  SessionRepository.kt
ui/src/main/java/com/example/realsensecapture/ui/: GalleryScreen.kt  Placeholder.kt  PreviewScreen.kt  PreviewSurface.kt  RealSenseCaptureApp.kt  SessionDetailsScreen.kt  SettingsRepository.kt  SettingsScreen.kt  VoiceNoteController.kt
ui/src/test/java/com/example/realsensecapture/ui/: PlaceholderUnitTest.kt
